--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "mssql": "^10.0.2",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
